test/analyzer/input_programs/invalid_programs/program31.tea
x := class:
  init: () -> 'hello'
  z: class:
    a: class:
      b: [1,2,3,4,5,6,7,8]
    end
  end
  int: 8
end

f := () -> [1,2,3,4,5]

y := new x()

#valid
y.f()[3].a
(((y.z).a).b)[1]
y.int+7

#invalid since z is not an object
z := 5
z.3